change module version(jspsychophysics.js @2.3.1)

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         src="https://cdn.jsdelivr.net/gh/jspsych/jsPsych/plugins/jspsych-virtual-chinrest.js"></script>
     <script type="text/javascript" src="https://lib.pavlovia.org/jspsych-pavlovia-3.2.5.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/spectra@0.2.3/spectra.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/kurokida/jspsych-psychophysics/jspsych-psychophysics.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/kurokida/jspsych-psychophysics@2.3.1/jspsych-psychophysics.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jstat@latest/dist/jstat.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/nicolaspanel/numjs@0.15.1/dist/numjs.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/numeric@1.2.6/numeric-1.2.6.min.js"></script>
